# xrpl-mithril

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md
crates/xrpl-client/: Cargo.toml
crates/xrpl-client/src/: client.rs  error.rs  jsonrpc.rs  lib.rs  subscription.rs  websocket.rs
crates/xrpl-codec/: Cargo.toml
crates/xrpl-codec/src/: definitions.rs  deserializer.rs  error.rs  field_code.rs  lib.rs  serializer.rs  signing.rs
crates/xrpl-codec/tests/: round_trip.rs
crates/xrpl-mithril/: Cargo.toml
crates/xrpl-mithril-client/: Cargo.toml
crates/xrpl-mithril-client/src/: client.rs  jsonrpc.rs  lib.rs  subscription.rs  websocket.rs
crates/xrpl-mithril-codec/: Cargo.toml  build.rs
crates/xrpl-mithril-codec/src/: deserializer.rs  field_code.rs  lib.rs  serializer.rs  signing.rs
crates/xrpl-mithril-codec/tests/: round_trip.rs
crates/xrpl-mithril-models/: Cargo.toml
crates/xrpl-mithril-models/src/: lib.rs  serde_helpers.rs
crates/xrpl-mithril-models/src/ledger/: account_root.rs  amm.rs  check.rs  credential.rs  deposit_preauth.rs  did.rs  directory.rs  escrow.rs  fee_settings.rs  mpt.rs  nft_page.rs  offer.rs  oracle.rs  pay_channel.rs  ripple_state.rs  signer_list.rs
crates/xrpl-mithril-models/src/requests/: account.rs  amm.rs  ledger.rs  mod.rs  nft.rs  oracle.rs  path.rs  server.rs  subscription.rs  transaction.rs  utility.rs
crates/xrpl-mithril-models/src/responses/: account.rs  amm.rs  ledger.rs  nft.rs  oracle.rs  path.rs  server.rs  subscription.rs  transaction.rs  utility.rs
crates/xrpl-mithril-models/src/transactions/: account.rs  amm.rs  clawback.rs  credential.rs  did.rs  escrow.rs  flags.rs  mod.rs  mpt.rs  nft.rs  offer.rs  oracle.rs  payment.rs  payment_channel.rs  trust_set.rs  wrapper.rs  xchain.rs
crates/xrpl-mithril-tx/: Cargo.toml
crates/xrpl-mithril-tx/src/: autofill.rs  builder.rs  error.rs  lib.rs  reliable.rs  submit.rs
crates/xrpl-mithril-types/: Cargo.toml
crates/xrpl-mithril-types/src/: account.rs  blob.rs  error.rs  hash.rs  lib.rs  timestamp.rs
crates/xrpl-mithril-wallet/: Cargo.toml
crates/xrpl-mithril-wallet/src/: address.rs  algorithm.rs  error.rs  keypair.rs  lib.rs  seed.rs  signer.rs
crates/xrpl-mithril/src/: lib.rs
crates/xrpl-models/: Cargo.toml
crates/xrpl-models/src/: lib.rs  serde_helpers.rs
crates/xrpl-models/src/ledger/: account_root.rs  amm.rs  check.rs  credential.rs  deposit_preauth.rs  did.rs  directory.rs  escrow.rs  fee_settings.rs  mod.rs  mpt.rs  nft_page.rs  offer.rs  oracle.rs  pay_channel.rs  ripple_state.rs  signer_list.rs
crates/xrpl-models/src/requests/: account.rs  amm.rs  ledger.rs  mod.rs  nft.rs  oracle.rs  path.rs  server.rs  subscription.rs  transaction.rs  utility.rs
crates/xrpl-models/src/responses/: account.rs  amm.rs  ledger.rs  mod.rs  nft.rs  oracle.rs  path.rs  server.rs  subscription.rs  transaction.rs  utility.rs
crates/xrpl-models/src/transactions/: account.rs  amm.rs  clawback.rs  credential.rs  did.rs  escrow.rs  flags.rs  mod.rs  mpt.rs  nft.rs  offer.rs  oracle.rs  payment.rs  payment_channel.rs  trust_set.rs  wrapper.rs  xchain.rs
crates/xrpl-oxide/: Cargo.toml
crates/xrpl-oxide/src/: lib.rs
crates/xrpl-tx/: Cargo.toml
crates/xrpl-tx/src/: autofill.rs  builder.rs  error.rs  lib.rs  reliable.rs  submit.rs
crates/xrpl-types/: Cargo.toml
crates/xrpl-types/src/: account.rs  amount.rs  blob.rs  currency.rs  hash.rs  lib.rs  serde_helpers.rs  timestamp.rs
crates/xrpl-wallet/: Cargo.toml
crates/xrpl-wallet/src/: address.rs  algorithm.rs  error.rs  keypair.rs  lib.rs  seed.rs  signer.rs
examples/: account_info.rs  amm_lifecycle.rs  basic_payment.rs  check_operations.rs  clawback.rs  credentials.rs  dex_offers.rs  did_operations.rs  mpt_operations.rs  multi_sign.rs  nft_lifecycle.rs  payment_channels.rs  price_oracle.rs  subscribe_ledger.rs  token_escrow.rs  token_escrow_mpt.rs  trustline_payment.rs
research/: design-decisions.md
research/protocol-analysis/: binary-format.md  transaction-catalog.md
tests/fixtures/: test_vectors.json
tests/integration/: client_test.rs  submit_test.rs
