[package]
name = "xrpl-client"
version = "0.1.0-alpha.1"
description = "Network clients (JSON-RPC, WebSocket) for the XRP Ledger"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xrpl-types = { workspace = true }
xrpl-models = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
