[package]
name = "xrpl-mithril-codec"
version = "0.3.3"
description = "Binary serialization/deserialization for the XRP Ledger protocol"
documentation = "https://docs.rs/xrpl-mithril-codec"
readme = "../../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xrpl-mithril-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
indexmap = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
