[package]
name = "xrpl-mithril-models"
version = "0.4.3"
description = "Transaction types, ledger objects, and request/response types for the XRP Ledger"
documentation = "https://docs.rs/xrpl-mithril-models"
readme = "../../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xrpl-mithril-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
xrpl-mithril-codec = { workspace = true }

[lints]
workspace = true
