[package]
name = "xrpl-mithril-tx"
version = "0.4.3"
description = "Transaction building, autofilling, and submission for the XRP Ledger"
documentation = "https://docs.rs/xrpl-mithril-tx"
readme = "../../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xrpl-mithril-types = { workspace = true }
xrpl-mithril-models = { workspace = true }
xrpl-mithril-client = { workspace = true }
xrpl-mithril-wallet = { workspace = true }
xrpl-mithril-codec = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
