[package]
name = "xrpl-models"
version = "0.1.0-alpha.1"
description = "Transaction types, ledger objects, and request/response types for the XRP Ledger"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xrpl-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
xrpl-codec = { workspace = true }

[lints]
workspace = true
