[package]
name = "xrpl-oxide"
version = "0.1.0-alpha.1"
description = "A next-generation, pure Rust SDK for the XRP Ledger"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xrpl-types = { workspace = true }
xrpl-codec = { workspace = true }
xrpl-models = { workspace = true }
xrpl-wallet = { workspace = true }
xrpl-client = { workspace = true }
xrpl-tx = { workspace = true }

[lints]
workspace = true
