[package]
name = "xrpl-tx"
version = "0.1.0-alpha.1"
description = "Transaction building, autofilling, and submission for the XRP Ledger"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xrpl-types = { workspace = true }
xrpl-models = { workspace = true }
xrpl-client = { workspace = true }
xrpl-wallet = { workspace = true }
xrpl-codec = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
